src/test/deca/context/invalid/sansObj/or-binaire-float.deca
// Description:
//          Utilisation de l'opérateur || avec un float et un bool
//
// Résultat:
//Le terme de droite n'est pas un booléen
//
{
    boolean a = false;
    float b = 5.9;
    boolean c = (a || b);
}